Java 21 migration